style.css
body{
    padding: 0px;
    margin: 0px;

    /*turn off text highlighting*/
    -webkit-user-select: none;    /* Safari */
    -webkit-touch-callout: none;  /* iOS Safari */
    -khtml-user-select: none;     /* Konqueror HTML */
    -ms-user-select: none;        /* Internet Explorer/Edge */
    -moz-user-select: none;       /* Old versions of Firefox */
    user-select: none;    
    overflow: hidden;
    position:relative; 

    transform: translateZ(0)
}



#app{
    width:100%; 
    margin: 0px;
    padding: 0px;
    height:100%;
    display: grid ;
    grid-template-columns: 10% 70% 20%;
    grid-template-rows: 100%;
   
}


.menu {
    background-color: lightgray;
    padding: 10px;
    margin: 0px;
    z-index: 2;
}

.blueprintArea{
    
    padding: 10px;
    margin: 0px;
    overflow: hidden;
    
}

.blueprintContainer{
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
}


.preview{
   
    background-color: lightgray;
   

    padding: 5px;
    padding-right: 10px;
    z-index: 2;
}

.in {
    width: 9px;
    height: 9px;
    padding: 0px;
    margin: 0px;
   
    -webkit-border-radius: 25px;
    -moz-border-radius: 25px;
    
    border-radius: 25px;
    border: 1px black solid;
    
    display:inline-block;
  
  }

  svg{
    position: relative;
    z-index: 1;
  }

 



.blueprint{
    background-color: white;
    border: 1px black solid;
    position: absolute;
    
}

.blueprintItem{
    padding:5px
}

.blueprintHeading{
    padding:5px
}

.blueprint input{
    background-color: lightgray;
    outline-width: 0;
    
    background-color: transparent;
    outline: none;
    border: none;
    border-bottom: solid grey 1px;
}

input:focus,
select:focus,
textarea:focus,
button:focus {
    outline: none;
}

.italic {
    font-style:italic;
}

.selfNotifier{
    border: 1px black solid;
    margin: 4px;
    padding: 2px;
}

.page{
    background-color: white;
    border: 1px black solid;
    position: absolute;
    top: 30px;
    left: 100px;
    padding: 10px;
    margin-bottom: 10px;
    margin-top: 10px;
    
}

.text{
    margin-bottom: 10px;
    
}

.menu-item:hover{
    cursor: pointer;
}

